--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,3 +1,11 @@
 body {
-  background: purple;
+  background: linear-gradient(
+    90deg,
+    rgb(179, 99, 249) 11.2%,
+    rgb(165, 69, 249) 47.7%,
+    rgb(152, 38, 252) 80.2%
+  );
+}
+.navbar-green {
+  background: linear-gradient(-20deg, #3ced42 0%, #74f379 50%, #86e089 100%);
 }
