--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -9,6 +9,12 @@ body {
 .navbar-green {
   background: linear-gradient(-20deg, #3ced42 0%, #74f379 50%, #86e089 100%);
 }
-img {
-  width: 50;
+h1 {
+  font-size: 50px;
+}
+h2 {
+  font-size: 20px;
+}
+p {
+  font-size: 20px;
 }
