--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -15,10 +15,19 @@ body {
 .navbar-green {
   background: linear-gradient(-20deg, #3ced42 0%, #74f379 50%, #86e089 100%);
   font-family: var(--main-font-family);
-  font-weight: 600;
+  font-weight: bolder;
 }
 
-.hero-margin {
+.navbar-nav a {
+  color: rgb(152, 38, 252);
+}
+
+.navbar-nav a:hover {
+  color: rgb(152, 38, 252);
+  transform: scale(1.25);
+}
+
+.hero-section {
   margin-top: 120px;
   margin-bottom: 30px;
 }
@@ -90,7 +99,7 @@ p {
 }
 
 @media (max-width: 768px) {
-  .pau-intro {
+  .hero-section {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -137,7 +146,6 @@ p {
   background: rgb(71, 238, 76);
   display: block;
   margin: 20px auto;
-  border-radius: 5px;
   text-decoration: none;
   border: 3px solid rgb(152, 38, 252);
   padding: 10px;
