--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -54,11 +54,19 @@ h3 {
 }
 
 /* paragraphs */
-p {
+#paragraph {
   font-size: 20px;
   font-family: var(--main-font-family);
   font-weight: 500;
   text-align: justify;
+}
+
+#socialLinks {
+  font-size: 25px;
+  font-family: var(--main-font-family);
+  font-weight: 500;
+  margin-left: -400px;
+  margin-top: 17px;
 }
 
 .justified-text-right {
