--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -145,6 +145,11 @@ ul {
 /* social networks */
 .social-net:link {
   color: rgb(83, 239, 89);
+  text-decoration: none;
+}
+
+.social-net:hover {
+  color: rgb(87, 85, 85);
 }
 
 .social-net:visited {
@@ -170,11 +175,28 @@ ul {
 
 .social-btn {
   font-size: 40px;
-  transition: transform 0.5s ease;
+  margin-bottom: 20px;
 }
 
 .social-btn:hover {
   transform: scale(1.7);
+  transition: transform 0.5s ease;
+}
+
+.email-link {
+  margin-top: 75px;
+  margin-bottom: 20px;
+}
+
+.email-link a {
+  text-decoration: none;
+  font-size: 25px;
+  color: rgb(83, 239, 89);
+}
+
+.email-link:hover {
+  transform: scale(1.2);
+  transition: transform 0.5s ease;
 }
 
 /* buttons to see projects */
